--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="section-heading-upper">Fresh Coffee</span>
             <span class="section-heading-lower">Worth Drinking</span>
           </h2>
-          <p class="mb-3">Every cup of our quality artisan coffee starts with locally sourced, hand picked ingredients. Once you try it, our coffee will be a blissful addition to your everyday morning routine - we guarantee it!
+          <p class="mb-3">hola
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
@@ -85,7 +85,7 @@
               <span class="section-heading-upper">Our Promise</span>
               <span class="section-heading-lower">To You</span>
             </h2>
-            <p class="mb-0">When you walk into our shop to start your day, we are dedicated to providing you with friendly service, a welcoming atmosphere, and above all else, excellent products made with the highest quality ingredients. If you are not satisfied, please let us know and we will do whatever we can to make things right!</p>
+            <p class="mb-0">hogar</p>
           </div>
         </div>
       </div>
