--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <span class="section-heading-upper">Fresh Coffee</span>
             <span class="section-heading-lower">Worth Drinking</span>
           </h2>
-          <p class="mb-3">hola
+          <p class="mb-3">hola! deja tu casa en nuestras manos que nosotros haremos el resto
           </p>
           <div class="intro-button mx-auto">
             <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
@@ -85,7 +85,7 @@
               <span class="section-heading-upper">Our Promise</span>
               <span class="section-heading-lower">To You</span>
             </h2>
-            <p class="mb-0">hogar</p>
+            <p class="mb-0">Es dar un mejor servicio al cliente en ventas y sevicios del hogar</p>
           </div>
         </div>
       </div>
