--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
         <img class="intro-img img-fluid mb-3 mb-lg-0 rounded" src="img/intro.jpg" alt="">
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
-            <span class="section-heading-upper">Fresh Coffee</span>
-            <span class="section-heading-lower">Worth Drinking</span>
+            <span class="section-heading-upper">Es tiempo de innovar</span>
+            <span class="section-heading-lower">D' LUJO DE CORACIONES</span>
           </h2>
           <p class="mb-3">hola! deja tu casa en nuestras manos que nosotros haremos el resto
           </p>
