--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
           <p class="mb-3">hola! deja tu casa en nuestras manos que nosotros haremos el resto
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">Visit Us Today!</a>
+            <a class="btn btn-primary btn-xl" href="#">Visitanos Hoy!</a>
           </div>
         </div>
       </div>
@@ -82,8 +82,8 @@
         <div class="col-xl-9 mx-auto">
           <div class="cta-inner text-center rounded">
             <h2 class="section-heading mb-4">
-              <span class="section-heading-upper">Our Promise</span>
-              <span class="section-heading-lower">To You</span>
+              <span class="section-heading-upper">Nuestro principal</span>
+              <span class="section-heading-lower">OBJETIVO</span>
             </h2>
             <p class="mb-0">Es dar un mejor servicio al cliente en ventas y sevicios del hogar</p>
           </div>
