--- a/about.html
+++ b/about.html
@@ -25,8 +25,8 @@
 <body>
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
-    <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
-    <span class="site-heading-lower">Business Casual</span>
+    <span class="site-heading-upper text-primary mb-3">UN MUNDO DE IDEAS PARA TI</span>
+    <span class="site-heading-lower">NUETRSA PRIORIDAD ERES TU</span>
   </h1>
 
   <!-- Navigation -->
@@ -65,11 +65,11 @@
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                <span class="section-heading-lower">About Our Cafe</span>
+                <span class="section-heading-upper">ESTILO UNICO</span>
+                <span class="section-heading-lower">UN MUNDO NUEVO PARA TU HOGAR</span>
               </h2>
-              <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
-              <p class="mb-0">We guarantee that you will fall in <em>lust</em> with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+              <p>Esta pagina esta vasada en un proyecto final de la unieversidad O y M,de la materia servicios de internet demanos del profesor JODOROPO </p>
+              <p class="mb-0">JOHAN MANUEL DE MOTA Y LEONARDO HUSCKIN, esperan que les guste la pagina.</p>
             </div>
           </div>
         </div>
