--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
   <section class="page-section about-heading">
     <div class="container">
-      <img class= src="img/02_guetzli-14(1).jpg" alt="">
+      <img class="img/02_guetzli-14(1).jpg">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
