--- a/store.html
+++ b/store.html
@@ -25,8 +25,8 @@
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">A Free Bootstrap 4 Business Theme</span>
-      <span class="site-heading-lower">Business Casual</span>
+      <span class="site-heading-upper text-primary mb-3">D'LUJO, DECORACIONES DE INTERIORES DEL HOGAR</span>
+      <span class="site-heading-lower">CONOSENOS</span>
     </h1>
 
     <!-- Navigation -->
@@ -63,8 +63,8 @@
           <div class="col-xl-9 mx-auto">
             <div class="cta-inner text-center rounded">
               <h2 class="section-heading mb-5">
-                <span class="section-heading-upper">Come On In</span>
-                <span class="section-heading-lower">We're Open</span>
+                <span class="section-heading-upper">VENGA</span>
+                <span class="section-heading-lower">ESTAMOS ABIERTOS PARA TI</span>
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
@@ -98,17 +98,17 @@
               </ul>
               <p class="address mb-5">
                 <em>
-                  <strong>1116 Orchard Street</strong>
+                  <strong>LA ROMANA RD.</strong>
                   <br>
-                  Golden Valley, Minnesota
+                  VILLA HERMOSA/calle pincipal
                 </em>
               </p>
               <p class="mb-0">
                 <small>
-                  <em>Call Anytime</em>
+                  <em>llame al numero</em>
                 </small>
                 <br>
-                (317) 585-8468
+                (809)000-0000
               </p>
             </div>
           </div>
@@ -118,19 +118,19 @@
 
     <section class="page-section about-heading">
       <div class="container">
-        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/about.jpg" alt="">
+        <img class="img-fluid rounded about-heading-img mb-3 mb-lg-0" src="img/habitacion2.jpg" alt="">
         <div class="about-heading-content">
           <div class="row">
             <div class="col-xl-9 col-lg-10 mx-auto">
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
-                  <span class="section-heading-upper">Strong Coffee, Strong Roots</span>
-                  <span class="section-heading-lower">About Our Cafe</span>
+                  <span class="section-heading-upper">D'JULO</span>
+                  <span class="section-heading-lower">DEDICADOS A NUETROS CLIENTES</span>
                 </h2>
-                <p>Founded in 1987 by the Hernandez brothers, our establishment has been serving up rich coffee sourced from artisan farmers in various regions of South and Central America. We are dedicated to travelling the world, finding the best coffee, and bringing back to you here in our cafe.</p>
+                <p>ESTAMOS PARA PARA AYUDARTE EN TODO LO QUE NESECITES PARA TU HOGAR POR QUE TU ERES NUESTRA PREORIDAD..</p>
                 <p class="mb-0">We guarantee that you will fall in
                   <em>lust</em>
-                  with our decadent blends the moment you walk inside until you finish your last sip. Join us for your daily routine, an outing with friends, or simply just to enjoy some alone time.</p>
+                  ESTA EMPRESA ESTA DEDICADA Y COMPROMETIDA CON LA COMODIDAD DE NUESTROS CLIENTES,PRESTANDO NUETROS CERBICIOS PARA QUE USTED TENGA LA COMODIDAD Y LUJO QUE MERESE!.</p>
               </div>
             </div>
           </div>
