--- a/store.html
+++ b/store.html
@@ -25,8 +25,8 @@
   <body>
 
     <h1 class="site-heading text-center text-white d-none d-lg-block">
-      <span class="site-heading-upper text-primary mb-3">D'LUJO, DECORACIONES DE INTERIORES DEL HOGAR</span>
-      <span class="site-heading-lower">CONOSENOS</span>
+      <span class="site-heading-upper text-primary mb-3">DECORACIONES DE INTERIORES</span>
+      <span class="site-heading-lower">D'LUJO</span>
     </h1>
 
     <!-- Navigation -->
@@ -127,10 +127,10 @@
                   <span class="section-heading-upper">D'JULO</span>
                   <span class="section-heading-lower">DEDICADOS A NUETROS CLIENTES</span>
                 </h2>
-                <p>ESTAMOS PARA PARA AYUDARTE EN TODO LO QUE NESECITES PARA TU HOGAR POR QUE TU ERES NUESTRA PREORIDAD..</p>
-                <p class="mb-0">We guarantee that you will fall in
+                <p>nueestra prioridad son nuetrao clientes, nuetro trabajo y objetibo es dar un buen serbicio asi que te esperamos pronto..</p>
+                <p class="mb-0">Le garantisamos
                   <em>lust</em>
-                  ESTA EMPRESA ESTA DEDICADA Y COMPROMETIDA CON LA COMODIDAD DE NUESTROS CLIENTES,PRESTANDO NUETROS CERBICIOS PARA QUE USTED TENGA LA COMODIDAD Y LUJO QUE MERESE!.</p>
+                 un buen serbicio y un hogar diferente.</p>
               </div>
             </div>
           </div>
