--- a/store.html
+++ b/store.html
@@ -125,7 +125,7 @@
               <div class="bg-faded rounded p-5">
                 <h2 class="section-heading mb-4">
                   <span class="section-heading-upper">D'JULO</span>
-                  <span class="section-heading-lower">DEDICADOS </span>
+                  <span class="section-heading-lower"> </span>
                 </h2>
                 <p>nueestra prioridad son nuetrao clientes, nuetro trabajo y objetibo es dar un buen serbicio asi que te esperamos pronto..</p>
                 <p class="mb-0">Le garantisamos
