--- a/about.html
+++ b/about.html
@@ -59,7 +59,7 @@
 
   <section class="page-section about-heading">
     <div class="container">
-      <img class=src"img/interior.jpg">
+      <img class=src"about-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/havitacion.jpg" alt="">
       <div class="about-heading-content">
         <div class="row">
           <div class="col-xl-9 col-lg-10 mx-auto">
