--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">UNA GRAN CANTIDAD DE IDEAS</span>
-    <span class="site-heading-lower">ELIJE TU</span>
+    <span class="site-heading-lower">ELIGE TU</span>
   </h1>
 
   <!-- Navigation -->
