--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
         <div class="intro-text left-0 text-center bg-faded p-5 rounded">
           <h2 class="section-heading mb-4">
             <span class="section-heading-upper">Es tiempo de innovar</span>
-            <span class="section-heading-lower">D' LUJO DE CORACIONES</span>
+            <span class="section-heading-lower">D' LUJO DECORACIONES</span>
           </h2>
-          <p class="mb-3">hola! deja tu casa en nuestras manos que nosotros haremos el resto
+          <p class="mb-3">Hola! deja tu casa en nuestras manos que nosotros haremos el resto
           </p>
           <div class="intro-button mx-auto">
-            <a class="btn btn-primary btn-xl" href="#">Visitanos Hoy!</a>
+            <a class="btn btn-primary btn-xl" href="#">visítanos hoy!</a>
           </div>
         </div>
       </div>
@@ -85,7 +85,7 @@
               <span class="section-heading-upper">Nuestro principal</span>
               <span class="section-heading-lower">OBJETIVO</span>
             </h2>
-            <p class="mb-0">Es dar un mejor servicio al cliente en ventas y sevicios del hogar</p>
+            <p class="mb-0">Es dar un mejor servicio al cliente en ventas y servicios del hogar.</p>
           </div>
         </div>
       </div>
