--- a/about.html
+++ b/about.html
@@ -65,10 +65,10 @@
           <div class="col-xl-9 col-lg-10 mx-auto">
             <div class="bg-faded rounded p-5">
               <h2 class="section-heading mb-4">
-                <span class="section-heading-upper">ESTILO UNICO</span>
+                <span class="section-heading-upper">Estilo único </span>
                 <span class="section-heading-lower">UN MUNDO NUEVO PARA TU HOGAR</span>
               </h2>
-              <p>Esta pagina esta vasada en un proyecto final de la unieversidad O y M,de la materia servicios de internet demanos del profesor JODOROPO </p>
+              <p>Esta pagina esta basada en un proyecto final de la Universidad  O y M, de la materia servicios de internet de la mano del profesor JODOROPO. </p>
               <p class="mb-0">JOHAN MANUEL DE MOTA Y LEONARDO HUSCKIN, esperan que les guste la pagina.</p>
             </div>
           </div>
