--- a/products.html
+++ b/products.html
@@ -26,7 +26,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">UNA GRAN CANTIDAD DE IDEAS</span>
-    <span class="site-heading-lower">ELIGE TU</span>
+    <span class="site-heading-lower">TU ELIJES </span>
   </h1>
 
   <!-- Navigation -->
@@ -71,7 +71,7 @@
         <img class="product-item-img mx-auto d-flex rounded img-fluid mb-3 mb-lg-0" src="img/cocina.jpg" alt="">
         <div class="product-item-description d-flex mr-auto">
           <div class="bg-faded p-5 rounded">
-            <p class="mb-0">tenemos todo tipo de productos para tu cocina,con acabados de primera y colores unicos.</p>
+            <p class="mb-0"> Tenemos todo tipo de productos para tu cocina, con acabados de primera y colores únicos.</p>
           </div>
         </div>
       </div>
