--- a/store.html
+++ b/store.html
@@ -127,10 +127,10 @@
                   <span class="section-heading-upper">D'JULO</span>
                   <span class="section-heading-lower">DEDICADOS A TI </span>
                 </h2>
-                <p>nueestra prioridad son nuetrao clientes, nuetro trabajo y objetibo es dar un buen serbicio asi que te esperamos pronto..</p>
-                <p class="mb-0">Le garantisamos
+                <p>Nuestra prioridad son nuestros clientes, nuestro trabajo y objetivo es dar un buen servicio, asi que te esperamos pronto!..</p>
+                <p class="mb-0">Le garantizamos
                   <em>lust</em>
-                 un buen serbicio y un hogar diferente.</p>
+                 un buen servicio y un hogar diferente.</p>
               </div>
             </div>
           </div>
