--- a/store.html
+++ b/store.html
@@ -68,32 +68,32 @@
               </h2>
               <ul class="list-unstyled list-hours mb-5 text-left mx-auto">
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Sunday
-                  <span class="ml-auto">Closed</span>
+                  Domingo
+                  <span class="ml-auto">Cerrado</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Monday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Lune
+                  <span class="ml-auto">7:00 AM a 8:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Tuesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Marte
+                  <span class="ml-auto">7:00 AM a 8:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Wednesday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Miercole
+                  <span class="ml-auto">7:00 AM a 8:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Thursday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Jueve
+                  <span class="ml-auto">7:00 AM a 8:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Friday
-                  <span class="ml-auto">7:00 AM to 8:00 PM</span>
+                  Vierne
+                  <span class="ml-auto">7:00 AM a 8:00 PM</span>
                 </li>
                 <li class="list-unstyled-item list-hours-item d-flex">
-                  Saturday
-                  <span class="ml-auto">9:00 AM to 5:00 PM</span>
+                  Sábado
+                  <span class="ml-auto">9:00 AM a 5:00 PM</span>
                 </li>
               </ul>
               <p class="address mb-5">
@@ -129,7 +129,7 @@
                 </h2>
                 <p>Nuestra prioridad son nuestros clientes, nuestro trabajo y objetivo es dar un buen servicio, asi que te esperamos pronto!..</p>
                 <p class="mb-0">Le garantizamos
-                  <em>lust</em>
+                  <em></em>
                  un buen servicio y un hogar diferente.</p>
               </div>
             </div>
