--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
   <h1 class="site-heading text-center text-white d-none d-lg-block">
     <span class="site-heading-upper text-primary mb-3">UN MUNDO DE IDEAS PARA TI</span>
-    <span class="site-heading-lower">NUETRSA PRIORIDAD ERES TU</span>
+    <span class="site-heading-lower">NUESTRA PRIORIDAD ERES TU</span>
   </h1>
 
   <!-- Navigation -->
